# dash-capture

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: lint.yml
0.0.12/: 404.html  sitemap.xml
0.0.12/search/: search_index.json
0.0.14/: index.html
docs/: fn-interact.md  index.md
examples/: capture_demo.py  corpframe_demo.py  demo.py  hover_toolbar_poc.py  icon_button_demo.py  interact_demo.py  modebar_demo.py  mpl_renderer.py  plotly_size_demo.py  showcase.py  table_capture_demo.py  target_size_demo.py
examples/dash/: mpl_export.py
latest/: 404.html  index.html
main/: index.html  objects.inv  sitemap.xml
main/search/: search_index.json
r-packages/corpframe/R/: frame_png.R
r-packages/ggcorpframe/: DESCRIPTION  NAMESPACE
r-packages/ggcorpframe/R/: frame_python.R
r-packages/ggcorpframe/examples/: gg_demo.R
r-packages/ggcorpframe/tests/: testthat.R
src/dash_capture/: __init__.py  _hover_toolbar.py  _html2canvas.py  _icons.py  _ids.py  _modebar.py  _trigger.py  _with_capture.py  _with_hover_toolbar.py  _wizard.py  _wizard_callbacks.py  _wizard_layout.py  capture.py  mpl.py  pil.py  strategies.py
src/dash_fn_interact/: __init__.py  _config_builder.py  _field_components.py  _forms.py  _interact.py  _renderers.py  _spec.py
src/dash_fn_tools/: __init__.py  _config_builder.py
src/s5ndt/: __init__.py  _ids.py  config_builder.py  dropdown.py  fig_export.py  mpl.py  mpl_export.py
tests/: test_smoke.py
tests/dash_capture/: test_capture.py  test_dropdown.py  test_html2canvas.py  test_ids.py  test_mpl.py  test_pil.py  test_strategies.py  test_wizard.py
tests/dash_fn_interact/: test_fn_interact.py  test_forms.py  test_renderers.py
tests/dash_interact/: test_interact.py
tests/integration/: conftest.py  test_capture_integration.py  test_modebar_integration.py  test_regression_fixes.py
