[project]
name = "dash-capture"
dynamic = ["version"]
description = "Browser capture & custom renderer pipeline for Plotly Dash components"
keywords = ["plotly", "dash", "capture", "export", "screenshot", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "dash-fn-form",
    "dash>=4.0.0",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
]

[project.urls]
Homepage = "https://github.com/saemeon/dash-capture"
Repository = "https://github.com/saemeon/dash-capture"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = [
    "ruff",
    "prek",
    "ty",
    "numpy",
    "matplotlib",
    "pandas",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pydantic>=2.12.5",
    "dash-mantine-components>=2.6.0",
    "dash-bootstrap-components>=2.0.4",
    "annotated-types>=0.7.0",
    "dash[testing]",
    "dash-ace>=0.2.1",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/dash_capture/_version.py"

[tool.setuptools.dynamic]
version = { attr = "dash_capture._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dash_capture = ["py.typed", "assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PERF"]
ignore = ["E203", "E501"]
